--- a/stylesheets/_accessibility.scss
+++ b/stylesheets/_accessibility.scss
@@ -16,7 +16,7 @@
 }
 
 .screen-reader-text:focus {
-	@include globalvar(font-family, heading);
+	font-family: $x-font-family-heading;
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
